syntax = "proto3";
package applications;

message ApplicationRequest {
  string first_name = 1;
  string last_name = 2;
};

message ApplicationResponse {
  string application_id = 1;
  string status = 2;
  string first_name = 3;
  string last_name = 4;
};

message GetApplicationStatusRequest {
  string application_id = 1;
};

message GetApplicationStatusResponse {
  string id = 1;
  string application_id = 2;
  string status = 3;
  string first_name = 4;
  string last_name = 5;
};

service Applications {
  rpc CreateApplication(ApplicationRequest) returns (ApplicationResponse) {};
  rpc GetApplicationStatus(GetApplicationStatusRequest) returns (GetApplicationStatusResponse) {};
};
